--- a/css/myCurrency.css
+++ b/css/myCurrency.css
@@ -11,3 +11,32 @@
 
 .red{color:red;}
 .border{border: 1px solid red; padding:15px;}
+.border-black{border: 1px solid black; padding:15px;}
+
+
+
+/* Preloader, located in index.php, hidden by default */
+#overlay {
+	position:absolute;
+	top:16%;
+	display:none;
+}
+
+/* Mobile */
+@media screen and (max-width: 460px) {   
+  #overlay {
+	position:absolute;
+	top:37%; display:none;
+  }
+  
+  #overlay img {
+	width:70%;
+  }
+}
+/* END Mobile */
+/* END Preloader, located in index.php, hidden by default */
+
+
+/* Close cog */
+.close-it{position:absolute; top:0px; right:0px;color:black;}
+.close-it:hover{cursor:pointer; color:red;}
